Fixing divider visibility, adding popover to menu stories, review comments

--- a/packages/@adobe/spectrum-css-temp/components/menu/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/menu/index.css
@@ -46,7 +46,7 @@ governing permissions and limitations under the License.
 
   overflow: auto;
 
-  height: 250px;
+  height: 255px;
   width: 200px;
 
   > .spectrum-Menu-sectionHeading {
